streamlit and app update

--- a/notebook/games.ipynb
+++ b/notebook/games.ipynb
@@ -815,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sales varitions across platforms. the bar chart showcase total sales per platform indicated a clear hierachy in platform populartiy. specifically the PS2"
+    "### Sales variations across platforms. the bar chart showcase total sales per platform indicated a clear hierachy in platform populartiy. specifically the PS2"
    ]
   },
   {
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Platform life cycle the line graphy depicts yearly sales per platform and show the rise and fall of each one. Specially the Wii and PS2 with decliing after hitting record sales."
+    "### Platform life cycle the line graphy depicts yearly sales per platform and show the rise and fall of each one. Specially the Wii and PS2 with declining after hitting record sales."
    ]
   },
   {
@@ -1012,7 +1012,7 @@
    "metadata": {},
    "source": [
     "### 5.4 Global Sales Analysis\n",
-    "Total sales by region\n",
+    "Total Sales by Region\n",
     "Sales Trend Over Time\n",
     "Comparing Sales Between Region"
    ]
@@ -1081,7 +1081,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Global Sales Analysis sales trend over time showed significant regional differences with njorth america an deurope being the largest markets. peak sales areound mid 2000 to early 2010. "
+    "### Global Sales Analysis sales trend over time showed significant regional differences with North America an Europe being the largest markets. Peak sales areound mid 2000 to early 2010. "
    ]
   },
   {
@@ -1153,7 +1153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### User and critics review using scatter plots that if you have a higher score you typically gurantee higher sales, also due to loyalty, marketing, and platform exclusivity "
+    "### User and critic's reviews using scatter plots that if you have a higher score you typically gurantee higher sales, also due to loyalty, marketing, and platform exclusivity "
    ]
   },
   {
@@ -1447,7 +1447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### this shows that sports, action genres work better in NA and EU while role-playing games have strenght in Japan"
+    "### This shows that sports and action genres work better in NA and EU while role-playing games have strenght in Japan"
    ]
   },
   {
